syntax = "proto3";

option java_package = "com.flexport.oteldemo.api";
option java_outer_classname = "UserApiProto";
option java_multiple_files = true;

import "com/flexport/oteldemo/api/user.proto";

service UserApi {
    rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    User user = 1;
}
